--- a/Milestone4/Makefile
+++ b/Milestone4/Makefile
@@ -1,4 +1,4 @@
-all: hierarchical
+all: pca_hierarchical
 
 PYTHON_VER := python
 
@@ -9,13 +9,10 @@ gen_features:
 	$(PYTHON_VER) $(DIRSRC)calculate_zones.py
 	$(PYTHON_VER) $(DIRSRC)generate_features.py
 
-pca: gen_features
-	$(PYTHON_VER) $(DIRSRC)pca.py
+pca_hierarchical: gen_features
+	$(PYTHON_VER) $(DIRSRC)pca_hierarchical.py
 
-hierarchical: gen_features
-	$(PYTHON_VER) $(DIRSRC)hierarchical.py
-
-mkdir:
+dir:
 	mkdir -f $(DIROUT)/
 
 clean:
