working on risk zones

--- a/Milestone4/Makefile
+++ b/Milestone4/Makefile
@@ -9,11 +9,11 @@ gen_features:
 	$(PYTHON_VER) $(DIRSRC)calculate_zones.py
 	$(PYTHON_VER) $(DIRSRC)generate_features.py
 
-pca_hierarchical: gen_features
+pca_hierarchical: #gen_features
 	$(PYTHON_VER) $(DIRSRC)pca_hierarchical.py
 
 dir:
 	mkdir -f $(DIROUT)/
 
 clean:
-	$(RM) $(DIROUT)*
+	$(RM) $(DIROUT)*.csv
