m4 finished. generating csv with cluster, #accidents and mean

--- a/Milestone4/Makefile
+++ b/Milestone4/Makefile
@@ -9,7 +9,7 @@ gen_features:
 	$(PYTHON_VER) $(DIRSRC)calculate_zones.py
 	$(PYTHON_VER) $(DIRSRC)generate_features.py
 
-pca_hierarchical: #gen_features
+pca_hierarchical: gen_features
 	$(PYTHON_VER) $(DIRSRC)pca_hierarchical.py
 
 dir:
