:dancers: decision tree finished

--- a/Milestone7/Makefile
+++ b/Milestone7/Makefile
@@ -4,9 +4,11 @@ PYTHON_VER := python
 
 DIRSRC := src/
 DIROUT := out/
+FILENAME := decision_tree
 
 main:
 	$(PYTHON_VER) $(DIRSRC)decision_tree.py
+	convert $(DIROUT)$(FILENAME).pdf $(DIROUT)$(FILENAME).png
 
 clean:
 	$(RM) $(DIROUT)*
